hw5_lab8/tests/errors/sem_too_few_args.kt
// EXPECT: semantic error — too few arguments
fun add(a: Int, b: Int): Int {
    return a + b
}
fun main() {
    val r = add(1)
}
